--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.3.2",
     "cra-template": "1.2.0",
     "node-sass": "^7.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
